feat - updates for release 0.2.3